--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   flutter_naver_map: ^1.2.0
-  
+  geolocator: ^8.0.0
+  sliding_up_panel2: ^3.3.0+1
 
 dev_dependencies:
   flutter_test:
